# music_discord

./: .env.example  LICENSE  README.md  pyproject.toml
src/: bot.py
src/cogs/: music.py
